stripComments functie debugged