@@ -1,1 +1,3 @@
-stripComments functie debugged
+Default parameter labeledOnly=True van searchElements() veranderd naar labeledOnly=False.
+Implemented ParseInfo.getChildren()
+Implemented ParseInfo.getParent(start). See the help for the meaning of the "start" parameter.
